// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevelopersTable should render component with developers 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <h2
          class="el-text-base el-subtitle"
        >
          Total Developers
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          1
        </p>
        <div
          class="mocked-styled-115 el-table"
          data-has-call-to-action="false"
          data-has-expandable-action="true"
          data-num-columns-excl-action-col="7"
          role="table"
        >
          <div
            class="mocked-styled-101 el-table-headers-row"
            role="row"
          >
            <div
              aria-label="Company Name"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Company Name
            </div>
            <div
              aria-label="Developer Name"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Developer Name
            </div>
            <div
              aria-label="Developer Email"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Developer Email
            </div>
            <div
              aria-label="Job Title"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Job Title
            </div>
            <div
              aria-label="Account Status"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Account Status
            </div>
            <div
              aria-label="Created Date"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Created Date
            </div>
            <div
              aria-label="Agreed Terms Date"
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              Agreed Terms Date
            </div>
            <div
              class="mocked-styled-102 el-table-header"
              role="columnheader"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name settings"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-110 el-table-row-container"
            role="row"
          >
            <div
              class="mocked-styled-103 el-table-row"
            >
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Company Name"
                >
                  Reapit Sales
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Developer Name"
                >
                  Sales Team
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Developer Email"
                >
                  test@example.com
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Job Title"
                />
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Account Status"
                >
                  confirmed
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Created Date"
                >
                  03 Mar 2022 10:18
                </div>
              </div>
              <div
                class="el-table-cell-has-dark-text el-table-cell"
                role="cell"
              >
                <div
                  class="mocked-styled-111 el-table-cell-content"
                  data-narrow-label="Agreed Terms Date"
                >
                  -
                </div>
              </div>
              <div
                class="mocked-styled-109 el-table-expandable-row-trigger-cell"
                role="cell"
                tabindex="0"
              >
                <span
                  class="el-intent-default el-icon-new el-icon"
                >
                  <svg
                    fill="none"
                    height="1em"
                    role="img"
                    title="Icon image with name more"
                    viewBox="0 0 24 24"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                      fill="currentColor"
                    />
                  </svg>
                </span>
              </div>
            </div>
            <div
              class="mocked-styled-113 el-table-expandable-row"
            >
              <div
                class="mocked-styled-114 el-table-expandable-container"
              >
                <div
                  class="mocked-styled-2 el-button-group"
                >
                  <div
                    class="el-button-group-align-center el-button-group-inner"
                  >
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Update Status
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      DevEdition is Free
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Toggle Subscription 
                    </button>
                    <button
                      class="el-intent-primary el-button"
                      disabled=""
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Invite Member
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Fetch Members
                    </button>
                    <button
                      class="el-intent-primary el-button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Fetch Apps
                    </button>
                    <button
                      class="el-intent-danger el-button"
                      disabled=""
                      type="button"
                    >
                      <div
                        class="mocked-styled-0 el-button-loader"
                      />
                      Delete Developer
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <h2
        class="el-text-base el-subtitle"
      >
        Total Developers
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        1
      </p>
      <div
        class="mocked-styled-115 el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="7"
        role="table"
      >
        <div
          class="mocked-styled-101 el-table-headers-row"
          role="row"
        >
          <div
            aria-label="Company Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Company Name
          </div>
          <div
            aria-label="Developer Name"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Developer Name
          </div>
          <div
            aria-label="Developer Email"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Developer Email
          </div>
          <div
            aria-label="Job Title"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Job Title
          </div>
          <div
            aria-label="Account Status"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Account Status
          </div>
          <div
            aria-label="Created Date"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Created Date
          </div>
          <div
            aria-label="Agreed Terms Date"
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            Agreed Terms Date
          </div>
          <div
            class="mocked-styled-102 el-table-header"
            role="columnheader"
          >
            <span
              class="el-intent-default el-icon-new el-icon"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                title="Icon image with name settings"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18.917 12.88c.08-.584.08-1.176 0-1.76l2.06-1.85a1 1 0 0 0 .25-1.27l-1.18-2a1 1 0 0 0-1.19-.45l-2.65.9a7.2 7.2 0 0 0-1.52-.89l-.55-2.76a1 1 0 0 0-1-.8h-2.34a1 1 0 0 0-1 .8l-.53 2.74a7.5 7.5 0 0 0-1.52.89l-2.65-.9a1 1 0 0 0-1.19.47l-1.18 2a1 1 0 0 0 .25 1.27l2.1 1.85a6.5 6.5 0 0 0 0 1.76l-2.1 1.85a1 1 0 0 0-.25 1.27l1.18 2a1 1 0 0 0 1.19.45l2.65-.9c.47.356.98.654 1.52.89l.55 2.74a1 1 0 0 0 1 .8h2.36a1 1 0 0 0 1-.8l.55-2.74a7.2 7.2 0 0 0 1.52-.89l2.65.9a1 1 0 0 0 1.15-.45l1.18-2a1 1 0 0 0-.25-1.27zM11.977 15a3 3 0 1 1 0-6 3 3 0 0 1 0 6"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
        </div>
        <div
          class="mocked-styled-110 el-table-row-container"
          role="row"
        >
          <div
            class="mocked-styled-103 el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Company Name"
              >
                Reapit Sales
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Developer Name"
              >
                Sales Team
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Developer Email"
              >
                test@example.com
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Job Title"
              />
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Account Status"
              >
                confirmed
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Created Date"
              >
                03 Mar 2022 10:18
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
              role="cell"
            >
              <div
                class="mocked-styled-111 el-table-cell-content"
                data-narrow-label="Agreed Terms Date"
              >
                -
              </div>
            </div>
            <div
              class="mocked-styled-109 el-table-expandable-row-trigger-cell"
              role="cell"
              tabindex="0"
            >
              <span
                class="el-intent-default el-icon-new el-icon"
              >
                <svg
                  fill="none"
                  height="1em"
                  role="img"
                  title="Icon image with name more"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M7 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0M12 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4M19 14a2 2 0 1 0 0-4 2 2 0 0 0 0 4"
                    fill="currentColor"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="mocked-styled-113 el-table-expandable-row"
          >
            <div
              class="mocked-styled-114 el-table-expandable-container"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-center el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Update Status
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    DevEdition is Free
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Toggle Subscription 
                  </button>
                  <button
                    class="el-intent-primary el-button"
                    disabled=""
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Invite Member
                  </button>
                  <button
                    class="el-intent-primary el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Fetch Members
                  </button>
                  <button
                    class="el-intent-primary el-button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Fetch Apps
                  </button>
                  <button
                    class="el-intent-danger el-button"
                    disabled=""
                    type="button"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Delete Developer
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DevelopersTable should render component with no developers 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-mb11"
      >
        <div
          class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          role="status"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name info"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            aria-live="polite"
            class="el-pn-content"
          >
            No results found for your selected filters
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-mb11"
    >
      <div
        class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          No results found for your selected filters
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
